--- a/Foodzi/Foodzi/Base.lproj/Main.storyboard
+++ b/Foodzi/Foodzi/Base.lproj/Main.storyboard
@@ -36,7 +36,7 @@
                                 <rect key="frame" x="10" y="111" width="355" height="516"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="bigz" rowHeight="70" id="7qB-7s-GVM" customClass="RecipeTableViewCell" customModule="Foodzi" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="bigz" rowHeight="70" id="7qB-7s-GVM" customClass="RecipeTableViewCell" customModule="Foodzi" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="355" height="70"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7qB-7s-GVM" id="SR0-G8-SQK">
@@ -165,7 +165,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="LVr-So-JuV" customClass="DirectionTableViewCell" customModule="Foodzi" customModuleProvider="target">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="LVr-So-JuV" customClass="DirectionTableViewCell" customModule="Foodzi" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="343" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="LVr-So-JuV" id="yij-V9-dXY" customClass="DirectionTableViewCell" customModule="Foodzi" customModuleProvider="target">
@@ -196,7 +196,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Jge-Up-fgz">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Jge-Up-fgz">
                                         <rect key="frame" x="0.0" y="28" width="343" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Jge-Up-fgz" id="KDX-SM-bqC" customClass="IngredientTableViewCell" customModule="Foodzi" customModuleProvider="target">
@@ -236,14 +236,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="alZ-Ep-Cbe">
-                                <rect key="frame" x="296" y="20" width="63" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Edit"/>
-                                <connections>
-                                    <action selector="edit:" destination="ubw-DC-vaC" eventType="touchUpInside" id="RXy-Bj-GtG"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Rpe-84-GYJ">
                                 <rect key="frame" x="140" y="617" width="95" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -252,8 +244,29 @@
                                     <action selector="startCookingButton:" destination="ubw-DC-vaC" eventType="touchUpInside" id="igt-wx-VMB"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Dbp-1v-XaJ">
+                                <rect key="frame" x="15" y="15" width="34" height="30"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <segue destination="ubO-uF-3a4" kind="unwind" unwindAction="myUnwindActionDetailViewToMainWithUnwindSegue:" id="QPH-cX-F56"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="alZ-Ep-Cbe">
+                                <rect key="frame" x="330" y="15" width="30" height="30"/>
+                                <state key="normal" title="Edit"/>
+                                <connections>
+                                    <action selector="edit:" destination="ubw-DC-vaC" eventType="touchUpInside" id="RXy-Bj-GtG"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="o16-QM-4rP" firstAttribute="trailing" secondItem="alZ-Ep-Cbe" secondAttribute="trailing" constant="15" id="5Zd-EV-72p"/>
+                            <constraint firstItem="o16-QM-4rP" firstAttribute="trailing" secondItem="alZ-Ep-Cbe" secondAttribute="trailing" constant="15" id="FLH-Nb-ZaF"/>
+                            <constraint firstItem="Dbp-1v-XaJ" firstAttribute="top" secondItem="Euz-xp-mEW" secondAttribute="top" constant="15" id="lkb-WT-nLs"/>
+                            <constraint firstItem="alZ-Ep-Cbe" firstAttribute="top" secondItem="Euz-xp-mEW" secondAttribute="top" constant="15" id="lwL-si-pQV"/>
+                            <constraint firstItem="Dbp-1v-XaJ" firstAttribute="leading" secondItem="o16-QM-4rP" secondAttribute="leading" constant="15" id="pdY-je-S1G"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="o16-QM-4rP"/>
                     </view>
                     <connections>
@@ -268,8 +281,9 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="80N-6X-VSA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="ubO-uF-3a4" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="151" y="872"/>
+            <point key="canvasLocation" x="149.59999999999999" y="871.21439280359823"/>
         </scene>
         <!--Recipe Steps View Controller-->
         <scene sceneID="fOb-ad-LVm">
@@ -313,6 +327,9 @@
                                 <rect key="frame" x="172" y="595" width="32" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Stop"/>
+                                <connections>
+                                    <segue destination="aOc-Ev-xNr" kind="unwind" unwindAction="myUnwindActionInstructionViewToMainWithUnwindSegue:" id="mR1-fK-zE5"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="#" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="l43-PR-hzi">
                                 <rect key="frame" x="16" y="20" width="51" height="24"/>
@@ -334,6 +351,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xaM-He-jhn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="aOc-Ev-xNr" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="151" y="1650"/>
         </scene>
@@ -366,6 +384,13 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="htY-LN-Wae">
+                                <rect key="frame" x="25" y="35" width="45" height="30"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <segue destination="Dx9-Yo-qxi" kind="unwind" unwindAction="myUnwindActionNewRecipeToMainWithUnwindSegue:" id="PbF-Af-oxD"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -373,9 +398,13 @@
                             <constraint firstItem="i6P-pV-k7U" firstAttribute="leading" secondItem="556-fa-RIA" secondAttribute="leading" constant="104" id="Jyr-11-Aqh"/>
                             <constraint firstItem="556-fa-RIA" firstAttribute="trailing" secondItem="i6P-pV-k7U" secondAttribute="trailing" constant="103" id="L8I-i9-cwB"/>
                             <constraint firstItem="i6P-pV-k7U" firstAttribute="leading" secondItem="556-fa-RIA" secondAttribute="leading" constant="104" id="NYJ-wV-NuJ"/>
+                            <constraint firstItem="htY-LN-Wae" firstAttribute="top" secondItem="556-fa-RIA" secondAttribute="top" id="RND-g3-fvM"/>
                             <constraint firstItem="i6P-pV-k7U" firstAttribute="leading" secondItem="556-fa-RIA" secondAttribute="leading" constant="104" id="S7N-mp-pf4"/>
                             <constraint firstItem="556-fa-RIA" firstAttribute="trailing" secondItem="i6P-pV-k7U" secondAttribute="trailing" constant="103" id="Vcm-hI-Pqy"/>
+                            <constraint firstItem="htY-LN-Wae" firstAttribute="leading" secondItem="556-fa-RIA" secondAttribute="leading" constant="25" id="jVm-Ar-ZaT"/>
+                            <constraint firstItem="htY-LN-Wae" firstAttribute="top" secondItem="556-fa-RIA" secondAttribute="top" constant="15" id="oes-Nf-iLI"/>
                             <constraint firstItem="i6P-pV-k7U" firstAttribute="top" secondItem="556-fa-RIA" secondAttribute="top" constant="257" id="pl8-o5-Gdy"/>
+                            <constraint firstItem="556-fa-RIA" firstAttribute="trailing" secondItem="htY-LN-Wae" secondAttribute="trailing" constant="305" id="vLq-DG-NRN"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="556-fa-RIA"/>
                     </view>
@@ -385,6 +414,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0BP-Mc-2tp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Dx9-Yo-qxi" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="884" y="112.89355322338831"/>
         </scene>
@@ -409,14 +439,25 @@
                                     <action selector="UploadLinkAction:" destination="JCz-E3-9ko" eventType="touchUpInside" id="1yh-fz-z3s"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oKp-gO-7tI">
+                                <rect key="frame" x="15" y="35" width="46" height="30"/>
+                                <state key="normal" title="Back"/>
+                                <connections>
+                                    <segue destination="pFS-PL-HPc" kind="unwind" unwindAction="myUnwindActionUploadToNewRecipeWithUnwindSegue:" id="tYT-dL-7C5"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="oKp-gO-7tI" firstAttribute="leading" secondItem="VwF-Px-IQH" secondAttribute="leading" constant="15" id="4dI-wy-aV7"/>
+                            <constraint firstItem="oKp-gO-7tI" firstAttribute="top" secondItem="VwF-Px-IQH" secondAttribute="top" id="5Uu-LV-bAH"/>
+                            <constraint firstItem="oKp-gO-7tI" firstAttribute="top" secondItem="VwF-Px-IQH" secondAttribute="top" constant="15" id="7ZY-XP-cqR"/>
                             <constraint firstItem="VwF-Px-IQH" firstAttribute="trailing" secondItem="TRX-xm-ZOG" secondAttribute="trailing" constant="15" id="EaT-yj-hUP"/>
                             <constraint firstItem="Aqh-kS-oYC" firstAttribute="top" secondItem="TRX-xm-ZOG" secondAttribute="bottom" constant="10" id="IBg-Tj-fz5"/>
                             <constraint firstItem="TRX-xm-ZOG" firstAttribute="top" secondItem="VwF-Px-IQH" secondAttribute="top" constant="150" id="YPV-SO-p3g"/>
                             <constraint firstItem="TRX-xm-ZOG" firstAttribute="leading" secondItem="VwF-Px-IQH" secondAttribute="leading" constant="15" id="eOb-2a-AUi"/>
                             <constraint firstItem="Aqh-kS-oYC" firstAttribute="centerX" secondItem="TRX-xm-ZOG" secondAttribute="centerX" id="epP-jd-cWw"/>
+                            <constraint firstItem="VwF-Px-IQH" firstAttribute="trailing" secondItem="oKp-gO-7tI" secondAttribute="trailing" constant="314" id="upy-7j-ldt"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="VwF-Px-IQH"/>
                     </view>
@@ -425,6 +466,7 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0hZ-sb-gAp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="pFS-PL-HPc" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1680.8" y="112.89355322338831"/>
         </scene>
@@ -433,6 +475,6 @@
         <image name="Logo" width="740" height="324"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="r1H-gb-nXD"/>
+        <segue reference="OZa-pQ-o81"/>
     </inferredMetricsTieBreakers>
 </document>
