--- a/Foodzi/Foodzi/Base.lproj/Main.storyboard
+++ b/Foodzi/Foodzi/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Qax-65-B46">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -30,9 +30,6 @@
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sXU-uV-tqW">
                                                         <rect key="frame" x="0.0" y="0.0" width="305" height="30"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="width" constant="305" id="HUd-hZ-4ry"/>
-                                                        </constraints>
                                                         <nil key="textColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
@@ -54,9 +51,6 @@
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LUF-S9-sYg">
                                                         <rect key="frame" x="0.0" y="0.0" width="305" height="30"/>
                                                         <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="width" constant="305" id="qCf-Zs-vTE"/>
-                                                        </constraints>
                                                         <state key="normal" title="Get Cookin'!">
                                                             <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                         </state>
@@ -68,6 +62,13 @@
                                                 </subviews>
                                             </stackView>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="BRh-99-VNF" secondAttribute="trailing" id="29q-rO-Sff"/>
+                                            <constraint firstItem="Ugs-r9-9vJ" firstAttribute="leading" secondItem="zJH-yy-qxk" secondAttribute="leading" id="8aP-FF-dH4"/>
+                                            <constraint firstItem="BRh-99-VNF" firstAttribute="top" secondItem="Ugs-r9-9vJ" secondAttribute="bottom" constant="25" id="Fr4-Kj-F62"/>
+                                            <constraint firstAttribute="trailing" secondItem="Ugs-r9-9vJ" secondAttribute="trailing" id="aef-9B-Q8m"/>
+                                            <constraint firstItem="BRh-99-VNF" firstAttribute="leading" secondItem="zJH-yy-qxk" secondAttribute="leading" id="gKi-J5-VZd"/>
+                                        </constraints>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gQh-vO-GgL">
                                         <rect key="frame" x="0.0" y="260" width="305" height="30"/>
@@ -76,22 +77,19 @@
                                 </subviews>
                             </stackView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="ZSe-2d-ISP">
-                                <rect key="frame" x="12" y="31" width="350" height="112"/>
+                                <rect key="frame" x="12" y="36" width="351" height="112"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="112" id="7IJ-nl-eSI"/>
-                                    <constraint firstAttribute="width" constant="350" id="YwC-KU-0AS"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="ZSe-2d-ISP" firstAttribute="top" secondItem="vsJ-4Q-Tgv" secondAttribute="top" constant="16" id="55T-ag-D7s"/>
-                            <constraint firstItem="ZSe-2d-ISP" firstAttribute="top" secondItem="vsJ-4Q-Tgv" secondAttribute="top" constant="11" id="KWd-yW-sPH"/>
+                            <constraint firstItem="vsJ-4Q-Tgv" firstAttribute="trailing" secondItem="ZSe-2d-ISP" secondAttribute="trailing" constant="12" id="FWw-rh-ReG"/>
                             <constraint firstItem="ZSe-2d-ISP" firstAttribute="leading" secondItem="vsJ-4Q-Tgv" secondAttribute="leading" constant="12" id="MpJ-RQ-XR5"/>
-                            <constraint firstItem="vsJ-4Q-Tgv" firstAttribute="trailing" secondItem="ZSe-2d-ISP" secondAttribute="trailing" constant="16" id="SXm-tC-NHo"/>
                             <constraint firstItem="vsJ-4Q-Tgv" firstAttribute="trailing" secondItem="zAs-CC-ed3" secondAttribute="trailing" constant="35" id="WVV-pj-2ot"/>
                             <constraint firstItem="vsJ-4Q-Tgv" firstAttribute="bottom" secondItem="zAs-CC-ed3" secondAttribute="bottom" constant="147" id="ij1-Vk-w3K"/>
-                            <constraint firstItem="vsJ-4Q-Tgv" firstAttribute="trailing" secondItem="ZSe-2d-ISP" secondAttribute="trailing" constant="13" id="lDU-GA-gc7"/>
                             <constraint firstItem="zAs-CC-ed3" firstAttribute="leading" secondItem="vsJ-4Q-Tgv" secondAttribute="leading" constant="35" id="tr0-Q0-2UP"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="vsJ-4Q-Tgv"/>
@@ -110,7 +108,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TiJ-Kn-WZq" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="gCW-lM-PmK" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-679.20000000000005" y="38.23088455772114"/>
+            <point key="canvasLocation" x="-985" y="27"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -202,6 +200,7 @@
                                                 <constraint firstAttribute="bottom" secondItem="LYf-oi-Dkf" secondAttribute="bottom" id="OhF-6f-Qt2"/>
                                                 <constraint firstAttribute="trailing" secondItem="tFV-Zk-7hC" secondAttribute="trailing" constant="4" id="lhu-6E-rMs"/>
                                                 <constraint firstItem="LYf-oi-Dkf" firstAttribute="leading" secondItem="SR0-G8-SQK" secondAttribute="leading" id="mOy-hx-nzB"/>
+                                                <constraint firstItem="ECI-Us-gIs" firstAttribute="leading" secondItem="e97-Cg-PXz" secondAttribute="trailing" constant="30" id="oX7-3z-pKf"/>
                                                 <constraint firstItem="tFV-Zk-7hC" firstAttribute="top" secondItem="SR0-G8-SQK" secondAttribute="top" constant="5" id="sUT-Ks-hIJ"/>
                                                 <constraint firstItem="ECI-Us-gIs" firstAttribute="top" secondItem="tFV-Zk-7hC" secondAttribute="bottom" constant="6" id="xeD-2k-7xF"/>
                                                 <constraint firstItem="e97-Cg-PXz" firstAttribute="leading" secondItem="LYf-oi-Dkf" secondAttribute="trailing" constant="5" id="yc0-Dl-Tk8"/>
@@ -442,7 +441,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="80N-6X-VSA" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="ubO-uF-3a4" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-538" y="1322"/>
+            <point key="canvasLocation" x="636" y="1769"/>
         </scene>
         <!--Add Ingredients View Controller-->
         <scene sceneID="fVv-kG-4lT">
@@ -726,6 +725,7 @@
                                                 <constraint firstAttribute="trailing" secondItem="DIk-rU-Gqg" secondAttribute="trailing" constant="10" id="t6o-kG-DjS"/>
                                                 <constraint firstItem="0TP-TV-Ymj" firstAttribute="leading" secondItem="ORE-UF-Drv" secondAttribute="trailing" id="tnA-ig-OeU"/>
                                                 <constraint firstItem="ycK-y1-rH8" firstAttribute="top" secondItem="ctc-hI-b5U" secondAttribute="top" constant="5" id="ttk-4B-zEs"/>
+                                                <constraint firstItem="DIk-rU-Gqg" firstAttribute="leading" secondItem="MRe-Yz-48A" secondAttribute="trailing" constant="30" id="zjb-UR-Eqz"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -801,6 +801,34 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kc9-V6-E1Q" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="849" y="27"/>
+        </scene>
+        <!--Register New User-->
+        <scene sceneID="lF0-hC-tzg">
+            <objects>
+                <viewController id="Ggw-Me-ifb" customClass="RegisterNewUser" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="5Dp-bD-gSw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Logo" translatesAutoresizingMaskIntoConstraints="NO" id="lsd-Fe-8ZE">
+                                <rect key="frame" x="12" y="36" width="351" height="112"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="112" id="VoM-aj-3Dy"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="lsd-Fe-8ZE" firstAttribute="leading" secondItem="GNO-53-SxH" secondAttribute="leading" constant="12" id="eUI-2h-vZJ"/>
+                            <constraint firstItem="lsd-Fe-8ZE" firstAttribute="top" secondItem="GNO-53-SxH" secondAttribute="top" constant="16" id="fi9-qT-V0Z"/>
+                            <constraint firstAttribute="trailing" secondItem="lsd-Fe-8ZE" secondAttribute="trailing" constant="12" id="hQk-Ey-5m0"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="GNO-53-SxH"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nBv-K4-Xar" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-986" y="766"/>
         </scene>
         <!--View Profile Controller-->
         <scene sceneID="tNb-LP-4GC">
@@ -981,7 +1009,4 @@
         <image name="The-heart" width="2000" height="2000"/>
         <image name="icon-profile" width="512" height="512"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="0ax-G0-SvL"/>
-    </inferredMetricsTieBreakers>
 </document>
